Found assets for project.

--- a/less-assignment/index.html
+++ b/less-assignment/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Road Warriors - Bike Shop</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <link href="img/favicon.png" type="img/png" rel="icon"> -->
-	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
 	<link href="css/index.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 	<script src="https://kit.fontawesome.com/8b54dd32ad.js" crossorigin="anonymous"></script>
 
@@ -16,24 +13,253 @@
 </head>
 <body>
 	<header>
-		<h1 id="header">Road Warriors<i class="fas fa-biking logo"></i></h1>
-		<div class="nav-bar">
-			<nav>
-				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#news">News</a></li>
-					<li><a href="#contact">Contact</a></li>
-					<li><a href="#about">About</a></li>
-				</ul>
-			</nav>
+		<div class="header">
+			<h1>Road Warriors<i class="fas fa-biking logo"></i></h1>
+		</div>
+		<div id="navbar">
+			<div class="nav-container">
+				<div id="nav-logo" class="hide-nav-logo"><a><h1>Road Warriors<i class="fas fa-biking logo"></i></h1></a></div>
+				<div class="nav-links">
+					<a href="javascript:void(0)">GEAR</a>
+					<a href="javascript:void(0)">TECH</a>
+					<a href="javascript:void(0)">LIVING</a>
+					<a href="javascript:void(0)">VEHICLES</a>
+					<a href="javascript:void(0)">BUYING GUIDES</a>
+					<a href="javascript:void(0)">MORE</a>
+					<div class="search-container">
+						<form action="/action_page.php">
+							<input type="text" placeholder="Search..." name="search">
+							<button type="submit"><i class="fa fa-search"></i></button>
+						</form>
+					</div>
+				</div>
+			</div>
 		</div>
 	</header>
 	<main>
-		<div class="video-container">
-			<video controls autoplay>
-				<source src="assets/mountain-bike-video.mp4" type="video/mp4">
-			</video>
+		<div class="main-container">
+			<!--		<div class="video-container">-->
+			<!--			<video controls autoplay>-->
+			<!--				<source src="assets/mountain-bike-video.mp4" type="video/mp4">-->
+			<!--			</video>-->
+			<!--		</div>-->
+			<div class="image-container">
+				<img class="hero-image" src="assets/cafe-racer-hero-image-overlay.jpg" alt="BMW cafe racer bike in front of mountain">
+			</div>
+			<div class="catalog-container">
+				<div class="headings text-xl-center">
+					<div class="horizontal-line"></div>
+					<h1>STANDARD</h1>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/standard1.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Yamaha Teal Sport Bike</h1>
+							<p class="price-text">$300 - $1000 /job</p>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/standard3.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Custom-Made Moped</h1>
+							<p class="price-text">$399.99</p>
+						</div>
+					</div>
+				</div>
+				<div class="headings text-xl-center">
+					<div class="horizontal-line"></div>
+					<h1>CRUISERS</h1>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/cruiser2.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Custom-Made Sport Bullet</h1>
+							<span class="small-text">highest bidder</span>
+							<br>
+							<button>Bid Now</button>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/cruiser3.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>BMW Road Cruiser</h1>
+							<p class="price-text">$8,000</p>
+						</div>
+					</div>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/cruiser4.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Custom-Made Triumph</h1>
+							<span class="small-text">highest bidder</span>
+							<br>
+							<button>Bid Now</button>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/cruiser5.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Custom-Made Racer</h1>
+							<p class="price-text">$5,999.99</p>
+						</div>
+					</div>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/cruiser6.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Cafe Cruiser 1150</h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$2,249.99</p>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/cruiser7.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Cafe Racer</h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$3,999.99</p>
+						</div>
+					</div>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/cruiser8.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Indian Cafe Cruiser</h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$12,000</p>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/cruiser9.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Royal Enfield</h1>
+							<span class="small-text">highest bidder</span>
+							<br>
+							<button>Bid Now</button>
+						</div>
+					</div>
+				</div>
+				<div class="headings text-xl-center">
+					<div class="horizontal-line"></div>
+					<h1>SPORT BIKES</h1>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/sportbike1.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Honda CBR600RR</h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$6,999.99</p>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/sportbike2.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Suzuki GSX-R</h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$10,999.99</p>
+						</div>
+					</div>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/sportbike3.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Bullet Sport Bike</h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$5,299.99</p>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/sportbike4.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Ducati <span class="small-caps">(red)</span></h1>
+							<p class="price-text">$65,000</p>
+						</div>
+					</div>
+				</div>
+				<div class="headings text-xl-center">
+					<div class="horizontal-line"></div>
+					<h1>TOURING</h1>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/touring1.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
+						<div class="catalog-text">
+							<h1>Harley Davidson <span class="small-caps">(red cruiser)</span></h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$10,000</p>
+						</div>
+					</div>
+					<div class="catalog-item">
+						<img src="assets/touring2.jpg" alt="man on black cruiser motorcycle in highway"/>
+						<div class="catalog-text">
+							<h1>Harley Davidson <span class="small-caps">(black cruiser)</span></h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$7,499.99</p>
+						</div>
+					</div>
+				</div>
+				<div class="catalog-row">
+					<div class="catalog-item">
+						<img src="assets/touring3.jpg" alt="black and gray touring motorcycle on wooden dock near brown field under gray and orange skies"/>
+						<div class="catalog-text">
+							<h1>Harley Davidson</h1>
+							<span class="small-text">from</span>
+							<p class="price-text">$4,000</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
+	<footer>
+		<div class="footer-container">
+			<h1 class="footer-logo">Road Warriors<i class="fas fa-biking logo"></i></h1>
+			<div class="nav-links-row">
+				<h3>GEAR</h3>
+				<h3 class="slash-divider">/</h3>
+				<h3>TECH</h3>
+				<h3 class="slash-divider">/</h3>
+				<h3>LIVING</h3>
+				<h3 class="slash-divider">/</h3>
+				<h3>VEHICLES</h3>
+				<h3 class="slash-divider">/</h3>
+				<h3>BUYING GUIDES</h3>
+				<h3 class="slash-divider">/</h3>
+				<h3>MORE</h3>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
+<script>
+	window.onscroll = function() {myFunction()};
+
+	let navbar = document.getElementById("navbar");
+	let navBarLogo = document.getElementById("nav-logo");
+	let sticky = navbar.offsetTop;
+
+	function myFunction() {
+		if (window.pageYOffset >= sticky) {
+			navbar.classList.add("sticky");
+			navbar.classList.add("animated");
+			navbar.classList.remove("nav-styles");
+			navbar.classList.add("scroll-nav-styles");
+			navBarLogo.classList.remove("hide-nav-logo");
+			navBarLogo.classList.add("show-nav-logo");
+			navBarLogo.classList.add("animated");
+		} else {
+			navbar.classList.remove("sticky");
+			navBarLogo.classList.add("hide-nav-logo");
+			navBarLogo.classList.remove("show-nav-logo");
+			navbar.classList.remove("scroll-nav-styles");
+			navbar.classList.add("nav-styles");
+		}
+	}
+</script>
