--- a/less-assignment/shopBikes.html
+++ b/less-assignment/shopBikes.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body onload="myFunction()">
 	<header>
 		<div class="header">
 			<h1>Road Warriors<i class="fas fa-biking logo"></i></h1>
@@ -20,14 +20,14 @@
 			<div class="nav-container">
 				<div id="nav-logo" class="hide-nav-logo"><a><h1>Road Warriors<i class="fas fa-biking logo"></i></h1></a></div>
 				<div class="nav-links">
+					<a href="index.html">HOME</a>
 					<a href="javascript:void(0)">GEAR</a>
-					<a href="javascript:void(0)">TECH</a>
 					<a href="javascript:void(0)">LIVING</a>
-					<a href="javascript:void(0)">VEHICLES</a>
+					<a href="shopBikes.html" class="active">BIKES</a>
 					<a href="javascript:void(0)">BUYING GUIDES</a>
 					<a href="javascript:void(0)">MORE</a>
 					<div class="search-container">
-						<form action="/action_page.php">
+						<form action="">
 							<input type="text" placeholder="Search..." name="search">
 							<button type="submit"><i class="fa fa-search"></i></button>
 						</form>
@@ -38,28 +38,19 @@
 	</header>
 	<main>
 		<div class="main-container">
-			<!--		<div class="video-container">-->
-			<!--			<video controls autoplay>-->
-			<!--				<source src="assets/mountain-bike-video.mp4" type="video/mp4">-->
-			<!--			</video>-->
-			<!--		</div>-->
-			<div class="image-container">
-				<img class="hero-image" src="assets/cafe-racer-hero-image-overlay.jpg" alt="BMW cafe racer bike in front of mountain">
-			</div>
 			<div class="catalog-container">
 				<div class="headings text-xl-center">
-					<div class="horizontal-line"></div>
 					<h1>STANDARD</h1>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/standard1.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Yamaha Teal Sport Bike</h1>
 							<p class="price-text">$300 - $1000 /job</p>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/standard3.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Custom-Made Moped</h1>
@@ -71,8 +62,8 @@
 					<div class="horizontal-line"></div>
 					<h1>CRUISERS</h1>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser2.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Custom-Made Sport Bullet</h1>
@@ -81,7 +72,7 @@
 							<button>Bid Now</button>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser3.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>BMW Road Cruiser</h1>
@@ -89,8 +80,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser4.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Custom-Made Triumph</h1>
@@ -99,7 +90,7 @@
 							<button>Bid Now</button>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser5.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Custom-Made Racer</h1>
@@ -107,8 +98,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser6.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Cafe Cruiser 1150</h1>
@@ -116,7 +107,7 @@
 							<p class="price-text">$2,249.99</p>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser7.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Cafe Racer</h1>
@@ -125,8 +116,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser8.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Indian Cafe Cruiser</h1>
@@ -134,7 +125,7 @@
 							<p class="price-text">$12,000</p>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/cruiser9.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Royal Enfield</h1>
@@ -148,8 +139,8 @@
 					<div class="horizontal-line"></div>
 					<h1>SPORT BIKES</h1>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/sportbike1.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Honda CBR600RR</h1>
@@ -157,7 +148,7 @@
 							<p class="price-text">$6,999.99</p>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/sportbike2.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Suzuki GSX-R</h1>
@@ -166,8 +157,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/sportbike3.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Bullet Sport Bike</h1>
@@ -175,7 +166,7 @@
 							<p class="price-text">$5,299.99</p>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/sportbike4.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Ducati <span class="small-caps">(red)</span></h1>
@@ -187,8 +178,8 @@
 					<div class="horizontal-line"></div>
 					<h1>TOURING</h1>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/touring1.jpg" alt="Guy standing on BMW cafe racer on the roads in the woods"/>
 						<div class="catalog-text">
 							<h1>Harley Davidson <span class="small-caps">(red cruiser)</span></h1>
@@ -196,7 +187,7 @@
 							<p class="price-text">$10,000</p>
 						</div>
 					</div>
-					<div class="catalog-item">
+					<div class="bike-catalog-item">
 						<img src="assets/touring2.jpg" alt="man on black cruiser motorcycle in highway"/>
 						<div class="catalog-text">
 							<h1>Harley Davidson <span class="small-caps">(black cruiser)</span></h1>
@@ -205,8 +196,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="catalog-row">
-					<div class="catalog-item">
+				<div class="bike-catalog-row">
+					<div class="bike-catalog-item">
 						<img src="assets/touring3.jpg" alt="black and gray touring motorcycle on wooden dock near brown field under gray and orange skies"/>
 						<div class="catalog-text">
 							<h1>Harley Davidson</h1>
@@ -222,17 +213,27 @@
 		<div class="footer-container">
 			<h1 class="footer-logo">Road Warriors<i class="fas fa-biking logo"></i></h1>
 			<div class="nav-links-row">
-				<h3>GEAR</h3>
+				<a href="index.html"><h3>home</h3></a>
 				<h3 class="slash-divider">/</h3>
-				<h3>TECH</h3>
+				<a href="javascript:void(0)"><h3>gear</h3></a>
 				<h3 class="slash-divider">/</h3>
-				<h3>LIVING</h3>
+				<a href="javascript:void(0)"><h3>living</h3></a>
 				<h3 class="slash-divider">/</h3>
-				<h3>VEHICLES</h3>
+				<a href="shopBikes.html"><h3>bikes</h3></a>
 				<h3 class="slash-divider">/</h3>
-				<h3>BUYING GUIDES</h3>
+				<a href="javascript:void(0)"><h3>buying guides</h3></a>
 				<h3 class="slash-divider">/</h3>
-				<h3>MORE</h3>
+				<a href="javascript:void(0)"><h3>more</h3></a>
+			</div>
+			<div class="nav-links-row">
+				<p class="copyright">&copy; 2020 tyler ivie &bull; all rights reserved &bull; dgm 2780</p>
+			</div>
+			<div class="nav-links-row">
+				<i class="fab fa-facebook-square"></i>
+				<i class="fab fa-instagram"></i>
+				<i class="fab fa-pinterest-square"></i>
+				<i class="fab fa-twitter-square"></i>
+				<i class="fab fa-youtube-square"></i>
 			</div>
 		</div>
 	</footer>
